Updated code with new refactored API builder and ability to use multipart files.